objects/COS_SW_Update_Order__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HostId__c</fullName>
        <label>HostId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Mail_To__c</fullName>
        <label>License Mail To</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <inlineHelpText>Order placed time</inlineHelpText>
        <label>Order Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Order_Item_Number__c</fullName>
        <label>Order Item Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Order_Line_Item_Number_String__c</fullName>
        <formula>IF( RecordType.DeveloperName == &apos;Order_Line_Item&apos;, LPAD(TEXT(Order_Item_Number__c ), 6, &apos;0&apos; ), null)</formula>
        <label>Order Line Item Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number_String__c</fullName>
        <formula>IF( RecordType.DeveloperName == &apos;Parent_Order&apos;, LPAD(TEXT( Order_Number__c ), 6, &apos;0&apos; ), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <picklist>
            <picklistValues>
                <fullName>Update Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Base Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>License File</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Order</label>
        <referenceTo>COS_SW_Update_Order__c</referenceTo>
        <relationshipName>Release_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipName>Release_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_platform_Id__c</fullName>
        <label>Release platform Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ship_To_State__c</fullName>
        <label>Ship To State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Address2__c</fullName>
        <label>Ship to Address2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Address__c</fullName>
        <label>Ship to Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Zip__c</fullName>
        <label>Ship to Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_city__c</fullName>
        <label>Ship to city</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UserId</label>
        <referenceTo>User</referenceTo>
        <relationshipName>COS_SW_Update_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ship_to_Country__c</fullName>
        <label>ship to Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>COS SW Update Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RO-{000000}</displayFormat>
        <label>COS SW Update Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>COS SW Update Orders</pluralLabel>
    <recordTypes>
        <fullName>Order_Line_Item</fullName>
        <active>true</active>
        <label>Order Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>Parent_Order</fullName>
        <active>true</active>
        <description>Record Type for Parent Order</description>
        <label>Parent Order</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>